--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="edit_text_margin_top">@dimen/_10sdp</dimen>
     <dimen name="edit_text_margin_start">@dimen/_5sdp</dimen>
     <dimen name="forgot_pass_text_size">@dimen/_12ssp</dimen>
+    <dimen name="main_layout_padding">@dimen/_10sdp</dimen>
+    <dimen name="button_padding">@dimen/_10sdp</dimen>
 </resources>
