--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,12 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="button">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:padding">@dimen/button_padding</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">@dimen/edit_text_margin_top</item>
+    </style>
 </resources>
