--- a/app/src/main/res/drawable/rounded_imageview_back.xml
+++ b/app/src/main/res/drawable/rounded_imageview_back.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:width="4dp"
-        android:color="@color/grey" />
+        android:width="3dp"
+        android:color="#C1808080" />
 </shape>
