--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/textView"
         style="@style/TextHeadLine"
-        android:text="@string/login"
+        android:text="@string/loginBody"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -121,7 +121,7 @@
             <Button
                 android:id="@+id/login_btn"
                 style="@style/button"
-                android:text="@string/login" />
+                android:text="@string/loginBody" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
