--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -173,7 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/edit_text_margin_start"
-            android:text="@string/login"
+            android:text="@string/loginBody"
             android:textColor="@color/primary"
             android:textSize="@dimen/forgot_pass_text_size"
             android:textStyle="bold" />
