--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <include layout="@layout/items_layout"
+                android:id="@+id/items_lay"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
